<resources>
    <string name="app_name">SportsFestApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eventList">eventList</string>
    <string name="scheduleList">scheduleList</string>
    <string name="no_internet">No internet connection!</string>
    <string name="no_schedule">No schedules to display</string>
    <string name="title_activity_maps">Map</string>
    <string name="loading">Loading...</string>

    <string name="badminton">Badminton</string>
    <string name="lawn_tennis">Table Tennis</string>
    <string name="table_tennis">Lawn Tennis</string>
    <string name="athletics">Athletics</string>
    <string name="chess">Chess</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="volleyball">Volleyball</string>


    <string name="individual_events">INDIVIDUAL EVENTS</string>
    <string name="team_events">TEAM EVENTS</string>
    <string name="about_us">About Us</string>
    <string name="about_txt">"Shaping young minds with skill oriented and value based education is what we believe at K.I.E.T. Founded in 1997, K.I.E.T holds the title of the best institute for technical studies in the entire National Capital Region. Serving quality education for more than a decade, K.I.E.T is recognised for its excellence in management, pharmacy and technical studies.

We are proud to announce the début of our inter college sports meet 'Rann'16' from 11th to 13th of March.

Whether you command the straight drive or bowl an in-swinging Yorker. Whether you set the badminton court on fire with your smashes or produce a blazing ace serve at the tennis court. Whether you chip the goalkeeper at the football ground or shoot a 3 pointer at the basketball court. Whether you boost the ball at the volleyball court or spin the ball at the TT arena..... Join the battlefield because winners never quit and quitters never win.

So assemble your task force. Bring in your team. Here, we provide you a platform to unleash that fervour. A place to refuge for all the sports lovers out there and a place to overcome their fears.

'Come and live Sports with us.'"</string>


    <string name="apex_name_harshit">Harshit Sirvastav</string>
    <string name="apex_name_kartik">Kartik Saxena</string>


    <string name="widget_title">Sports Fest</string>
    <string name="widget_no_schedule">No matches for now.</string>


    <string name="contact_one">+919415216310</string>
    <string name="contact_sec">+919415344077</string>

    <string name="kiet">KIET</string>
    <string name="SRM">SRM</string>
    <string name="HRIT">HRIT</string>
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="third">3</string>
    <string name="share">Share</string>
    <string name="vs">VS</string>
    <string name="venue"> Click to check out the venue
    </string>
    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="phone_text">Phone No.</string>
    <string name="collg_text">College</string>
    <string name="submit">Submit</string>

    <string name="rules">Rules</string>
    <string name="schedule">Rules</string>
    <string name="results">Results</string>
    <string name="reg_teams">Registered Teams</string>
    <string name="register">Register</string>
    <string name="invalid_data">Some data is invalid!</string>
    <string name="reg_success">Registered successfully!</string>
    <string name="reg_fail">Email already registered!</string>


</resources>

