<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="bottom"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding_res"
            android:textSize="@dimen/txt_label_size"
            android:typeface="serif"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/SRM"

            />
                <TextView
                android:id="@+id/txt_win"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_res"
                android:padding="@dimen/layout_padding_res"
                android:text="@string/second"
                android:gravity="center"
                android:textSize="@dimen/txt_size_res"
                android:textColor="@android:color/white"
                android:typeface="serif"
                android:textStyle="bold"
               android:background="@color/colorPrimary"
                />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="bottom"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_padding_res"
                android:textSize="@dimen/txt_label_size"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/kiet"
                />
            <TextView
                android:id="@+id/txt_runners"
                android:layout_width="match_parent"
                android:layout_height="@dimen/first_view_layout_height"
                android:text="@string/first"
                android:paddingBottom="@dimen/first_view_padding_bottom"
                android:gravity="center"
                android:textSize="@dimen/txt_size_res"
                android:textColor="@android:color/white"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_padding_res"
                android:textSize="@dimen/txt_label_size"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/HRIT"
                />
            <TextView
                android:id="@+id/txt_sec_runners"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_res"
                android:padding="@dimen/layout_padding_res"
                android:gravity="center"
                android:text="@string/third"
                android:textSize="@dimen/txt_size_res"
                android:textColor="@android:color/white"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                />
        </LinearLayout>


    </LinearLayout>
    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/share_btn_margin"
        android:text="@string/share"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>
</LinearLayout>