<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_bottom">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/layout_padding_reg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:hint="@string/name_text"
                        android:ems="10"
                        android:textSize="@dimen/text_size"
                        android:id="@+id/editName"
                        android:layout_gravity="center_horizontal" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height"
                    android:layout_marginTop="@dimen/layout_margin_top_reg">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:textSize="@dimen/text_size"
                        android:hint="@string/email_text"
                        android:id="@+id/editEmail"
                        android:layout_gravity="center_horizontal" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height"
                    android:layout_marginTop="@dimen/layout_margin_top_reg">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"
                        android:hint="@string/phone_text"
                        android:ems="10"
                        android:textSize="@dimen/text_size"
                        android:id="@+id/editMobNo" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height"
                    android:layout_marginTop="@dimen/layout_margin_top_reg">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/editCollege"
                        android:hint="@string/collg_text"
                        android:textSize="@dimen/text_size"
                        android:layout_gravity="center_horizontal" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    ></Spinner>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/btn_submit"
        android:text="@string/submit"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="@dimen/layout_height"
        android:textSize="@dimen/text_size"
        android:background="@color/colorPrimary"
        android:layout_gravity="bottom"

        />
</FrameLayout>